@@ -1,5 +1,6 @@
 0.30-dev
 -revise sprite orderedupdates.
+-add sprite group alias.
 
 0.30    2021-04-28
 -center display frame.
